--- a/reportsForProject_soldArea.html
+++ b/reportsForProject_soldArea.html
@@ -72,7 +72,7 @@
 			        title  : '<br/>销售项目',
 			        halign : 'center'
 			    }, {
-			        field  : 'saleTypeName',
+			        field  : 'saletypename',
 			        title  : '<br/>业态',
 			        halign : 'center',
 			        align  : 'center'
