--- a/reportsForProject_soldCount.html
+++ b/reportsForProject_soldCount.html
@@ -72,22 +72,22 @@
 			        title  : '<br/>销售项目',
 			        halign : 'center'
 			    }, {
-			        field  : 'saleTypeName',
+			        field  : 'saletypename',
 			        title  : '<br/>业态',
 			        halign : 'center',
 			        align  : 'center'
 			    }, {
-			        field  : 'totalCount',
+			        field  : 'totalcount',
 			        title  : '<br/>总数量',
 			        halign : 'center',
 			        align  : 'right'
 			    }, {
-			        field  : 'soldCount',
+			        field  : 'soldcount',
 			        title  : '已售<br/>套数',
 			        halign : 'center',
 			        align  : 'right'
 			    }, {
-			        field  : 'remainCount',
+			        field  : 'remaincount',
 			        title  : '未售<br/>套数',
 			        halign : 'center',
 			        align  : 'right'
