--- a/reportsForMonth_tendence.html
+++ b/reportsForMonth_tendence.html
@@ -59,8 +59,8 @@
 
 			// 请求的URL地址
 			var URL_LIST = {
-				charts: '_temp/reportsForMonth_tendence_list.html'
-				// charts: CONSTANT.IP_PATH + '/VipService.asmx/WXSR_GetMonthPurSignRecReport'
+				// charts: '_temp/reportsForMonth_tendence_list.html'
+				charts: CONSTANT.IP_PATH + '/VipService.asmx/WXSR_GetMonthPurSignRecReport'
 
 			}
 
