--- a/yearReceive_project.html
+++ b/yearReceive_project.html
@@ -71,12 +71,12 @@
 			        title: '项目',
 			        halign: 'center'
 			    }, {
-			        field: 'yearSignBudget',
+			        field: 'yearRecBudget',
 			        title: '年度到款<br/>预算',
 			        halign: 'center',
 			        align: 'right'
 			    }, {
-			        field: 'yearSignDone',
+			        field: 'yearRecDone',
 			        title: '实际到款<br/>金额',
 			        halign: 'center',
 			        align: 'right'
