--- a/reportsForProject_purchaseSign.html
+++ b/reportsForProject_purchaseSign.html
@@ -34,7 +34,7 @@
 			</div>
 
 			<div class="table-wrapper" style="padding-top:50px; font-size: 0.8em;">
-				<table class="table-striped unitsListTable" id="unitsListTable" data-cache="false" data-show-footer="true">
+				<table class="table-striped table-condensed unitsListTable" id="unitsListTable" data-cache="false" data-show-footer="true">
 					<thead></thead>
 					<tbody></tbody>
 				</table>
