--- a/reportsForProject_soldArea.html
+++ b/reportsForProject_soldArea.html
@@ -33,7 +33,7 @@
 				</ul>
 			</div>
 
-			<div class="table-wrapper" style="padding-top:50px;">
+			<div class="table-wrapper" style="padding-top:50px; font-size: 0.8em;">
 				<table class="table-striped unitsListTable" id="unitsListTable" data-cache="false" data-show-footer="true">
 					<thead></thead>
 					<tbody></tbody>
