--- a/saleForBuilding.html
+++ b/saleForBuilding.html
@@ -39,6 +39,7 @@
 			</div>
 
 			<div class="table-wrapper">
+				<div class="alert alert-danger text-center alert-tip" id="alertTip">请选择项目！</div>
 				<div id="tableContent" style="display: none;">
 					<div id="buildingName" class="btn btn-primary btn-block active" style="margin-top:-5px; margin-bottom:5px;">&nbsp;</div>
 					<table class="table-striped unitsListTable" id="unitsListTable" data-cache="false" data-show-footer="true">
