--- a/reportsForDay_sign.html
+++ b/reportsForDay_sign.html
@@ -34,7 +34,17 @@
 
 			<div class="table-wrapper">
 
-				<label for="rptDate" id="buildingName" class="btn btn-primary btn-block page-header">日新增认购情况  &nbsp; <span id="rptDateText"></span> <span class="caret"></span></label>
+				<div class="btn-group btn-group-justified">
+					<div class="btn-group">
+						<button id="rptDatePrev" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-chevron-left"></i></button>
+					</div>
+					<div class="btn-group" style="width:2.5%">
+						<label for="rptDate" id="buildingName" class="btn btn-primary page-header"><span id="rptDateText"></span> <span class="caret"></span></label>
+					</div>
+					<div class="btn-group">
+						<button id="rptDateNext" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-chevron-right"></i></button>
+					</div>
+				</div>
 
 				<input type="date" class="form-control hide-date-input" name="rptDate" id="rptDate">
 
@@ -46,13 +56,13 @@
 
 			<div class="bottom-back-btn">
 				<div class="btn-group btn-group-justified">
-				  <div class="btn-group" role="group">
+				  <div class="btn-group">
 				    <button id="historyBack" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-chevron-left"></i> 后退</button>
 				  </div>
-				  <div class="btn-group" role="group">
+				  <div class="btn-group">
 				    <button id="goToHome" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-home"></i> 首页</button>
 				  </div>
-				  <div class="btn-group" role="group">
+				  <div class="btn-group">
 				    <button id="historyForward" type="button" class="btn btn-primary">前进 <i class="glyphicon glyphicon-chevron-right"></i></button>
 				  </div>
 				</div>
@@ -71,7 +81,8 @@
 
 			}
 
-			var TABLE_COLUMNS =[{
+			var TABLE_COLUMNS =[
+				{
 			        field: 'projectName',
 			        title: '销售项目',
 			        halign: 'center'
@@ -95,14 +106,17 @@
 			        title: '认购金额<br/>(万元)',
 			        halign: 'center',
 			        align: 'right'
-			    }];
+			    }
+			];
 
 			$(function() {
-				
 				$('#rptDate').val(CONSTANT.YESTODAY).on('change', function(){
 					$('#rptDateText').text(this.value);
 					loadTableList(URL_LIST.yearSign_area_list, {RptDate : this.value});
 				}).change();
+
+				//日期切换
+				dateSwitchBar('d');
 				
 				//navigator bar 导航
 				initNavigatorBar();
