add date nav avaliable check

--- a/reportsForDay_receive.html
+++ b/reportsForDay_receive.html
@@ -110,7 +110,7 @@
 				}).change();
 
 				//日期切换
-				dateSwitchBar('d');
+				dateSwitchBar('d', 0, (new Date(CONSTANT.TODAY)).getTime());
 						
 				//navigator bar 导航
 				initNavigatorBar();
