--- a/reportsForDay_sign.html
+++ b/reportsForDay_sign.html
@@ -116,7 +116,7 @@
 				}).change();
 
 				//日期切换
-				dateSwitchBar('d');
+				dateSwitchBar('d', 0, (new Date(CONSTANT.TODAY)).getTime());
 				
 				//navigator bar 导航
 				initNavigatorBar();
