--- a/reportsForMonth_area.html
+++ b/reportsForMonth_area.html
@@ -34,7 +34,17 @@
 
 			<div class="table-wrapper">
 
-				<label for="rptDate" id="buildingName" class="btn btn-primary btn-block page-header"><span id="rptDateText"></span>月份报表&nbsp;<span class="caret"></span></label>
+				<div class="btn-group btn-group-justified">
+					<div class="btn-group">
+						<button id="rptDatePrev" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-chevron-left"></i></button>
+					</div>
+					<div class="btn-group" style="width:2.5%">
+						<label for="rptDate" id="buildingName" class="btn btn-primary page-header"><span id="rptDateText"></span> <span class="caret"></span></label>
+					</div>
+					<div class="btn-group">
+						<button id="rptDateNext" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-chevron-right"></i></button>
+					</div>
+				</div>
 
 				<input type="month" class="form-control hide-date-input" name="rptDate" id="rptDate">
 
@@ -122,6 +132,9 @@
 					loadTableList(URL_LIST.yearSign_area_list, {RptMonth : (this.value).replace('-','')});
 				}).change();
 				
+				//日期切换
+				dateSwitchBar('m', (new Date('2013-01')).getTime(), (new Date(CONSTANT.YEAR_MONTH)).getTime());
+
 				//navigator bar 导航
 				initNavigatorBar();
 			});
