--- a/reportsForMonth_month.html
+++ b/reportsForMonth_month.html
@@ -34,7 +34,17 @@
 
 			<div class="table-wrapper">
 				
-				<label for="rptDate" id="buildingName" class="btn btn-primary btn-block page-header"><span id="rptDateText"></span>年各月报表&nbsp;<span class="caret"></span></label>
+				<div class="btn-group btn-group-justified">
+					<div class="btn-group">
+						<button id="rptDatePrev" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-chevron-left"></i></button>
+					</div>
+					<div class="btn-group" style="width:2.5%">
+						<label for="rptDate" id="buildingName" class="btn btn-primary page-header"><span id="rptDateText"></span> <span class="caret"></span></label>
+					</div>
+					<div class="btn-group">
+						<button id="rptDateNext" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-chevron-right"></i></button>
+					</div>
+				</div>
 
 				<select class="hide-date-input" name="rptDate" id="rptDate"></select>
 
@@ -116,6 +126,9 @@
 
 					URL_LIST.gotoPageParam[1].value = this.value;
 				}).change();
+
+				//日期切换
+				dateSwitchBar('y', 2012, CONSTANT.YEAR);
 								
 				//navigator bar 导航
 				initNavigatorBar();
