--- a/yearReceive_area.html
+++ b/yearReceive_area.html
@@ -34,7 +34,7 @@
 
 			<div class="table-wrapper">
 
-				<label for="rptDate" id="buildingName" class="btn btn-primary btn-block page-header">年度到款情况  &nbsp; <span id="rptDateText"></span> <span class="caret"></span></label>
+				<label for="rptDate" id="buildingName" class="btn btn-primary btn-block page-header"><span id="rptDateText"></span> <span class="caret"></span></label>
 
 				<input type="date" class="form-control hide-date-input" name="rptDate" id="rptDate">
 
