--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-
 		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 		<link href="assets/css/index.css" rel="stylesheet" type="text/css" />
 	</head>
@@ -28,15 +27,15 @@
 				<a href="saleForBuilding.html" ><b><i class="glyphicon glyphicon-stats"></i></b><span>楼栋销况概览</span></a>
 			</li>
 			<li>
-				<a href="#" ><b><i class="glyphicon glyphicon-random"></i></b><span>项目现金流量表</span></a>
+				<a href="javascript:void(0);" ><b><i class="glyphicon glyphicon-question-sign"></i></b><span>...</span></a>
+				<!-- <a href="#" ><b><i class="glyphicon glyphicon-random"></i></b><span>项目现金流量表</span></a> -->
 			</li>
 			<li>
-				<a href="#" ><b><i class="glyphicon glyphicon-search"></i></b><span>...</span></a>
+				<a href="javascript:void(0);" ><b><i class="glyphicon glyphicon-question-sign"></i></b><span>...</span></a>
 			</li>
 			<li>
-				<a href="#" ><b><i class="glyphicon glyphicon-search"></i></b><span>...</span></a>
+				<a href="javascript:void(0);" ><b><i class="glyphicon glyphicon-question-sign"></i></b><span>...</span></a>
 			</li>
-			<!-- <li><a href="/" ><b><img src="images/tb08.png" /></b><span>在线留言</span></a></li> -->
-			</ul>
+		</ul>
 	</body>
 </html>
