--- a/reportsForMonth_saleType.html
+++ b/reportsForMonth_saleType.html
@@ -33,8 +33,18 @@
 			</div>
 
 			<div class="table-wrapper">
-
-				<label for="rptDate" id="buildingName" class="btn btn-primary btn-block page-header"><span id="rptDateText"></span>月份报表&nbsp;<span class="caret"></span></label>
+				
+				<div class="btn-group btn-group-justified">
+					<div class="btn-group">
+						<button id="rptDatePrev" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-chevron-left"></i></button>
+					</div>
+					<div class="btn-group" style="width:3.5%">
+						<label for="rptDate" id="buildingName" class="btn btn-primary page-header"><span id="rptDateText"></span> <span class="caret"></span></label>
+					</div>
+					<div class="btn-group">
+						<button id="rptDateNext" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-chevron-right"></i></button>
+					</div>
+				</div>
 
 				<input type="month" class="form-control hide-date-input" name="rptDate" id="rptDate">
 
@@ -103,13 +113,16 @@
 				var month = monthText.replace('-','');
 
 				$('#rptDate').val(monthText).on('change', function(){
-					$('#rptDateText').text(this.value);
+					$('#rptDateText').text(this.value + ' ' + queryParamsToObj().ProjectName);
 
 					loadTableList(URL_LIST.yearSign_area_list, {
 						RptMonth : this.value.replace('-',''), 
 						ProjectName : queryParamsToObj().ProjectName
 					});
 				}).change();
+
+				//日期切换
+				dateSwitchBar('m', (new Date('2013-01')).getTime(), (new Date(CONSTANT.YEAR_MONTH)).getTime());
 												
 				//navigator bar 导航
 				initNavigatorBar();
