--- a/reportsForMonth_tendence.html
+++ b/reportsForMonth_tendence.html
@@ -30,7 +30,17 @@
 
 			<div class="table-wrapper">
 
-				<label for="rptDate" id="buildingName" class="btn btn-primary btn-block page-header"><span id="rptDateText"></span>年&nbsp;<span class="caret"></span></label>
+				<div class="btn-group btn-group-justified" style="z-index: 2;">
+					<div class="btn-group">
+						<button id="rptDatePrev" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-chevron-left"></i></button>
+					</div>
+					<div class="btn-group" style="width:2.5%">
+						<label for="rptDate" id="buildingName" class="btn btn-primary page-header"><span id="rptDateText"></span>年 <span class="caret"></span></label>
+					</div>
+					<div class="btn-group">
+						<button id="rptDateNext" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-chevron-right"></i></button>
+					</div>
+				</div>
 
 				<select class="hide-date-input" name="rptDate" id="rptDate"></select>
 
@@ -55,6 +65,7 @@
 						
 		</div>
 	
+		<script src="assets/js/yearSignReceive.js"></script>
 		<script>
 
 			// 请求的URL地址
@@ -87,6 +98,9 @@
 					$('#rptDateText').text(this.value);
 
 				}).change();
+
+				//日期切换
+				dateSwitchBar('y', 2012, CONSTANT.YEAR);
 
 				//navigator bar 导航
 				initNavigatorBar();
