--- a/reportsForMonth_project.html
+++ b/reportsForMonth_project.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 
-		<title>区域——经营分析 月报表</title>
+		<title>区域—经营分析 月报表</title>
 
 		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="assets/bootstrap-table/bootstrap-table.min.css">
@@ -115,7 +115,7 @@
 
 			$(function() {
 				
-				var year = (new Date()).getFullYear();
+				var year = queryParamsToObj().RptYear;
 				var month = queryParamsToObj().RptMonth;
 				if(month.length < 2){month = '0' + month}
 
