--- a/reportsForMonth_saleType.html
+++ b/reportsForMonth_saleType.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 
-		<title>区域——经营分析 月报表</title>
+		<title>区域—经营分析 月报表</title>
 
 		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="assets/bootstrap-table/bootstrap-table.min.css">
@@ -38,7 +38,7 @@
 					<div class="btn-group">
 						<button id="rptDatePrev" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-chevron-left"></i></button>
 					</div>
-					<div class="btn-group" style="width:3.5%">
+					<div class="btn-group" style="width:4%">
 						<label for="rptDate" id="buildingName" class="btn btn-primary page-header"><span id="rptDateText"></span> <span class="caret"></span></label>
 					</div>
 					<div class="btn-group">
