--- a/reportsForMonth_tendence.html
+++ b/reportsForMonth_tendence.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 
-		<title>销售趋势——经营分析 月报表</title>
+		<title>销售趋势—经营分析 月报表</title>
 
 		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="assets/css/common.css">
