--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<ul class="mainmenu">
 			<li><a href="yearSign_area.html" >
-				<b><i class="glyphicon glyphicon-tasks"></i></b><span>年度预算完成情况表</span></a>
+				<b><i class="glyphicon glyphicon-tasks"></i></b><span>年度任务完成情况表</span></a>
 			</li>
 			<li>
 				<a href="reportsForProject_purchaseSign.html" ><b><i class="glyphicon glyphicon-signal"></i></b><span>项目统计表</span></a>
