--- a/reportsForDay_sign.html
+++ b/reportsForDay_sign.html
@@ -93,12 +93,17 @@
 			        align: 'right'
 			    }, {
 			        field: 'carport',
-			        title: '车位及<br/>储藏间(个)',
+			        title: '车位<br/>(个)',
 			        halign: 'center',
 			        align: 'right'
 			    }, {
 			        field: 'shop',
 			        title: '商铺<br/>(个)',
+			        halign: 'center',
+			        align: 'right'
+			    }, {
+			        field: 'other',
+			        title: '其他<br/>(个)',
 			        halign: 'center',
 			        align: 'right'
 			    }, {
