--- a/reportsForProject_purchaseSign.html
+++ b/reportsForProject_purchaseSign.html
@@ -69,26 +69,26 @@
 			var TABLE_COLUMNS =[
 				{
 			        field  : 'projectName',
-			        title  : '<br/>销售项目',
+			        title  : '销售项目',
 			        halign : 'center'
 			    }, {
 			        field  : 'purchaseTotal',
-			        title  : '<br/>已认购',
+			        title  : '已认购<br/>(万元)',
 			        halign : 'center',
 			        align  : 'right'
 			    }, {
 			        field  : 'signTotal',
-			        title  : '<br/>已签约',
+			        title  : '已签约<br/>(万元)',
 			        halign : 'center',
 			        align  : 'right'
 			    }, {
 			        field  : 'receiveTotal',
-			        title  : '<br/>已到款',
+			        title  : '已到款<br/>(万元)',
 			        halign : 'center',
 			        align  : 'right'
 			    }, {
 			        field  : 'unreceiveTotal',
-			        title  : '<br/>未到款',
+			        title  : '未到款<br/>(万元)',
 			        halign : 'center',
 			        align  : 'right'
 			    }
