--- a/yearReceive_project.html
+++ b/yearReceive_project.html
@@ -75,7 +75,7 @@
 			        halign: 'center'
 			    }, {
 			        field: 'yearRecBudget',
-			        title: '年度到款<br/>预算',
+			        title: '年度到款<br/>任务',
 			        halign: 'center',
 			        align: 'right'
 			    }, {
@@ -85,7 +85,7 @@
 			        align: 'right'
 			    }, {
 			        field: 'completePercent',
-			        title: '预算完成<br/>比例',
+			        title: '任务完成<br/>比例',
 			        halign: 'center',
 			        align: 'right'
 			    }];
