--- a/yearSign_area.html
+++ b/yearSign_area.html
@@ -88,7 +88,7 @@
 			        halign: 'center'
 			    }, {
 			        field: 'yearSignBudget',
-			        title: '年度签约<br/>预算',
+			        title: '年度签约<br/>任务',
 			        halign: 'center',
 			        align: 'right'
 			    }, {
@@ -98,7 +98,7 @@
 			        align: 'right'
 			    }, {
 			        field: 'completePercent',
-			        title: '预算完成<br/>比例',
+			        title: '任务完成<br/>比例',
 			        halign: 'center',
 			        align: 'right'
 			    }];
