--- a/reportsForDay_receive.html
+++ b/reportsForDay_receive.html
@@ -96,6 +96,11 @@
 			        halign: 'center',
 			        align: 'right'
 			    }, {
+			        field: 'unSignNum',
+			        title: '未签约<br/>(万元)',
+			        halign: 'center',
+			        align: 'right'
+			    }, {
 			        field: 'unReceiveNum',
 			        title: '未到款<br/>(万元)',
 			        halign: 'center',
