--- a/reportsForProject_soldArea.html
+++ b/reportsForProject_soldArea.html
@@ -34,7 +34,7 @@
 			</div>
 
 			<div class="table-wrapper" style="padding-top:50px; font-size: 0.8em;">
-				<table class="table-striped unitsListTable" id="unitsListTable" data-cache="false" data-show-footer="true">
+				<table class="table-striped unitsListTable" id="unitsListTable" data-cache="false" data-show-footer="true" data-row-style="RowStyleFun">
 					<thead></thead>
 					<tbody></tbody>
 				</table>
@@ -73,7 +73,7 @@
 			        halign : 'center'
 			    }, {
 			        field  : 'saletypename',
-			        title  : '<br/>业态',
+			        title  : '<br/>&nbsp;业态&nbsp;',
 			        halign : 'center',
 			        align  : 'center'
 			    }, {
