--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<a href="saleForBuilding.html" ><b><i class="glyphicon glyphicon-stats"></i></b><span>楼栋销况概览</span></a>
 			</li>
 			<li>
-				<a href="javascript:void(0);" ><b><i class="glyphicon glyphicon-question-sign"></i></b><span>...</span></a>
+				<a href="daySimpleReport.html" ><b><i class="glyphicon glyphicon-file"></i></b><span>日销售简报</span></a>
 				<!-- <a href="#" ><b><i class="glyphicon glyphicon-random"></i></b><span>项目现金流量表</span></a> -->
 			</li>
 			<li>
