--- a/reportsForMonth_tendence.html
+++ b/reportsForMonth_tendence.html
@@ -16,6 +16,13 @@
 		
 		<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 		<script src="assets/js/common.js"></script>
+
+		<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+		<script type="text/javascript">
+			document.addEventListener('WeixinJSBridgeReady', function onBridgeReady() {
+				WeixinJSBridge.call('hideOptionMenu');
+			});
+		</script>
 		
 	</head>
 	<body>
