--- a/yearSign_area.html
+++ b/yearSign_area.html
@@ -20,6 +20,13 @@
 		<script src="assets/bootstrap-table/bootstrap-table.js"></script>
 		<script src="assets/bootstrap-table/locale/bootstrap-table-zh-CN.min.js"></script>
 		<script src="assets/js/common.js"></script>
+
+		<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+		<script type="text/javascript">
+			document.addEventListener('WeixinJSBridgeReady', function onBridgeReady() {
+				WeixinJSBridge.call('hideOptionMenu');
+			});
+		</script>
 		
 	</head>
 	<body>
