--- a/daySimpleReport.html
+++ b/daySimpleReport.html
@@ -13,6 +13,12 @@
 
 		<link rel="stylesheet" href="assets/css/common.css">
 		<style type="text/css" media="screen">
+			html,body{
+				-webkit-user-select: auto;
+				-moz-user-select: auto;
+				user-select: auto;
+			}
+			
 			.dayReportContent{
 				border: 1px solid #CCC;
 				padding: 8px;
