fix android bug
fix android label for input bug

--- a/yearSign_project.html
+++ b/yearSign_project.html
@@ -41,8 +41,11 @@
 
 			<div class="table-wrapper">
 
-				<label for="rptDate" id="buildingName" class="btn btn-primary btn-block page-header"><span id="rptDateText"></span> <span class="caret"></span></label>
-				<input type="date" class="form-control hide-date-input" name="rptDate" id="rptDate">
+				<label for="rptDate" id="buildingName" class="btn btn-primary btn-block page-header">
+					<span id="rptDateText"></span> <span class="caret"></span>
+					<input type="date" class="form-control hide-date-input" name="rptDate" id="rptDate">
+				</label>
+				
 
 				<table class="table-striped unitsListTable" id="unitsListTable" data-cache="false" data-show-footer="true">
 					<thead></thead>
