--- a/daySimpleReport.html
+++ b/daySimpleReport.html
@@ -62,14 +62,17 @@
 						<button id="rptDatePrev" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-chevron-left"></i></button>
 					</div>
 					<div class="btn-group" style="width:2.5%">
-						<label for="rptDate" id="buildingName" class="btn btn-primary page-header"><span id="rptDateText"></span> <span class="caret"></span></label>
+						<label for="rptDate" id="buildingName" class="btn btn-primary page-header">
+							<span id="rptDateText"></span> <span class="caret"></span>
+							<input type="date" class="form-control hide-date-input" name="rptDate" id="rptDate">
+						</label>
 					</div>
 					<div class="btn-group">
 						<button id="rptDateNext" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-chevron-right"></i></button>
 					</div>
 				</div>
 
-				<input type="date" class="form-control hide-date-input" name="rptDate" id="rptDate">
+				
 
 				<div id="dayReportContent" class="dayReportContent">
 					
