--- a/reportsForDay_sign.html
+++ b/reportsForDay_sign.html
@@ -46,14 +46,17 @@
 						<button id="rptDatePrev" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-chevron-left"></i></button>
 					</div>
 					<div class="btn-group" style="width:2.5%">
-						<label for="rptDate" id="buildingName" class="btn btn-primary page-header"><span id="rptDateText"></span> <span class="caret"></span></label>
+						<label for="rptDate" id="buildingName" class="btn btn-primary page-header">
+							<span id="rptDateText"></span> <span class="caret"></span>
+							<input type="date" class="form-control hide-date-input" name="rptDate" id="rptDate">
+						</label>
 					</div>
 					<div class="btn-group">
 						<button id="rptDateNext" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-chevron-right"></i></button>
 					</div>
 				</div>
 
-				<input type="date" class="form-control hide-date-input" name="rptDate" id="rptDate">
+				
 
 				<table class="table-striped unitsListTable" id="unitsListTable" data-cache="false" data-show-footer="true">
 					<thead style="font-size:0.8em;"></thead>
