--- a/reportsForMonth_tendence.html
+++ b/reportsForMonth_tendence.html
@@ -42,14 +42,17 @@
 						<button id="rptDatePrev" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-chevron-left"></i></button>
 					</div>
 					<div class="btn-group" style="width:2.5%">
-						<label for="rptDate" id="buildingName" class="btn btn-primary page-header"><span id="rptDateText"></span>年 <span class="caret"></span></label>
+						<label for="rptDate" id="buildingName" class="btn btn-primary page-header">
+							<span id="rptDateText"></span>年 <span class="caret"></span>
+							<select class="form-control hide-date-input" name="rptDate" id="rptDate"></select>
+						</label>
 					</div>
 					<div class="btn-group">
 						<button id="rptDateNext" type="button" class="btn btn-primary"><i class="glyphicon glyphicon-chevron-right"></i></button>
 					</div>
 				</div>
 
-				<select class="hide-date-input" name="rptDate" id="rptDate"></select>
+				
 
 				<div id="canvas" style="width:100%; height:100%; margin-top:-44px;">
 					
