--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
 			</li>
 			<li>
 				<a href="daySimpleReport.html" ><b><i class="glyphicon glyphicon-file"></i></b><span>日销售简报</span></a>
-				<!-- <a href="#" ><b><i class="glyphicon glyphicon-random"></i></b><span>项目现金流量表</span></a> -->
 			</li>
 			<li>
-				<a href="javascript:void(0);" ><b><i class="glyphicon glyphicon-question-sign"></i></b><span>...</span></a>
+				<a href="reportsForDebt_project.html" ><b><i class="glyphicon glyphicon-credit-card"></i></b><span>超期未到款</span></a>
 			</li>
 			<li>
 				<a href="javascript:void(0);" ><b><i class="glyphicon glyphicon-question-sign"></i></b><span>...</span></a>
