--- a/_temp/reportsForDebt_building.html
+++ b/_temp/reportsForDebt_building.html
@@ -6,92 +6,92 @@
             "buildingName"          : "楼栋号",
             "unitId"        : "房间Id",
             "unitName"        : "房间号",
-            "userName"                : 3,
+            "userName"                : "张三",
             "debtNum"            : 5000
         },{
             "buildingName"          : "楼栋号",
             "unitId"        : "房间Id",
             "unitName"        : "房间号",
-            "userName"            : 3,
+            "userName"            : "张三",
             "debtNum"            : 5000
         },{
             "buildingName"          : "楼栋号",
             "unitId"        : "房间Id",
             "unitName"        : "房间号",
-            "userName"            : 3,
+            "userName"            : "张三",
             "debtNum"            : 5000
         },{
             "buildingName"          : "楼栋号",
             "unitId"        : "房间Id",
             "unitName"        : "房间号",
-            "userName"            : 3,
+            "userName"            : "张三",
             "debtNum"            : 5000
         },{
             "buildingName"          : "楼栋号",
             "unitId"        : "房间Id",
             "unitName"        : "房间号",
-            "userName"            : 3,
+            "userName"            : "张三",
             "debtNum"            : 5000
         },{
             "buildingName"          : "楼栋号",
             "unitId"        : "房间Id",
             "unitName"        : "房间号",
-            "userName"            : 3,
+            "userName"            : "张三",
             "debtNum"            : 5000
         },{
             "buildingName"          : "楼栋号",
             "unitId"        : "房间Id",
             "unitName"        : "房间号",
-            "userName"            : 3,
+            "userName"            : "张三",
             "debtNum"            : 5000
         },{
             "buildingName"          : "楼栋号",
             "unitId"        : "房间Id",
             "unitName"        : "房间号",
-            "userName"            : 3,
+            "userName"            : "张三",
             "debtNum"            : 5000
         },{
             "buildingName"          : "楼栋号",
             "unitId"        : "房间Id",
             "unitName"        : "房间号",
-            "userName"            : 3,
+            "userName"            : "张三",
             "debtNum"            : 5000
         },{
             "buildingName"          : "楼栋号",
             "unitId"        : "房间Id",
             "unitName"        : "房间号",
-            "userName"            : 3,
+            "userName"            : "张三",
             "debtNum"            : 5000
         },{
             "buildingName"          : "楼栋号",
             "unitId"        : "房间Id",
             "unitName"        : "房间号",
-            "userName"            : 3,
+            "userName"            : "张三",
             "debtNum"            : 5000
         },{
             "buildingName"          : "楼栋号",
             "unitId"        : "房间Id",
             "unitName"        : "房间号",
-            "userName"            : 3,
+            "userName"            : "张三",
             "debtNum"            : 5000
         },{
             "buildingName"          : "楼栋号",
             "unitId"        : "房间Id",
             "unitName"        : "房间号",
-            "userName"            : 3,
+            "userName"            : "张三",
             "debtNum"            : 5000
         },{
             "buildingName"          : "楼栋号",
             "unitId"        : "房间Id",
             "unitName"        : "房间号",
-            "userName"            : 3,
+            "userName"            : "张三",
             "debtNum"            : 5000
         },{
-            "buildingName"          : "楼栋号",
-            "unitId"        : "房间Id",
-            "unitName"        : "房间号",
-            "userName"            : 3,
-            "debtNum"            : 5000
+            "buildingName"          : "",
+            "unitId"        : "",
+            "unitName"        : "",
+            "userName"            : "小计",
+            "debtNum"            : 10000
         }
     ]
 }
