--- a/reportsForDebt_project.html
+++ b/reportsForDebt_project.html
@@ -69,8 +69,8 @@
 
 			// 请求的URL地址
 			var URL_LIST = {
-				// dataUrl: CONSTANT.IP_PATH + '/VipService.asmx/WXSR_GetDaySimpleReport' 
-				dataUrl: '_temp/reportsForDebt_project.html'
+				dataUrl: CONSTANT.IP_PATH + '/VipService.asmx/WXSR_GetAllUnRec' 
+				// dataUrl: '_temp/reportsForDebt_project.html'
 
 				,gotoPageUrl : "reportsForDebt_building.html" // 点击跳转至项目列表
 
