--- a/reportsForDebt_building.html
+++ b/reportsForDebt_building.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 
-		<title>超期未到款</title>
+		<title>逾期未到款</title>
 
 		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="assets/bootstrap-table/bootstrap-table.min.css">
@@ -34,7 +34,7 @@
 
 			<div class="fixd-tab-nav">
 				<ul class="nav nav-tabs nav-justified">
-					<li role="presentation" class="active"><a href="reportsForDebt_project.html">超期未到款</a></li>
+					<li role="presentation" class="active"><a href="reportsForDebt_project.html">逾期未到款</a></li>
 				</ul>
 			</div>
 
