--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<a href="daySimpleReport.html" ><b><i class="glyphicon glyphicon-file"></i></b><span>日销售简报</span></a>
 			</li>
 			<li>
-				<a href="reportsForDebt_project.html" ><b><i class="glyphicon glyphicon-credit-card"></i></b><span>超期未到款</span></a>
+				<a href="reportsForDebt_project.html" ><b><i class="glyphicon glyphicon-credit-card"></i></b><span>逾期未到款</span></a>
 			</li>
 			<li>
 				<a href="javascript:void(0);" ><b><i class="glyphicon glyphicon-question-sign"></i></b><span>...</span></a>
